tests/sksl/errors/RedeclareStructTypeWithName.sksl
struct foo {
    int x;
} foo;
